--- a/pom.xml
+++ b/pom.xml
@@ -2,14 +2,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.springsource.cloudfoundry.mvc</groupId>
-    <artifactId>web</artifactId>
-    <name>A Spring / Cloud Foundry Template</name>
+    <groupId>com.payon.doctor</groupId>
+    <artifactId>doctor-merchant-app</artifactId>
+    <name>The doctor's merchant app</name>
     <packaging>war</packaging>
     <version>1.0.0</version>
 
     <properties>
-        <java-version>1.6</java-version>
+        <java-version>1.7</java-version>
         <org.springframework-version>3.2.4.RELEASE</org.springframework-version>
     </properties>
     <dependencies>
